Missing gap style fix

--- a/stylesheets/less/app/05-A_components.less
+++ b/stylesheets/less/app/05-A_components.less
@@ -6648,6 +6648,8 @@
                         tr {
                             th {
                                 line-height: 40px;
+                                height: 60px;
+                                vertical-align: top;
 
                                 .sort {  
                                     background-image: @arrowSort;
@@ -6663,7 +6665,7 @@
                                 }
 
                                 &:first-child { padding: 0; }
-                                &.room { width: 80px; }
+                                &.room { width: 90px; }
                                 &.name { width: 280px; }
                                 &.date { width: 310px; }
                             }
